2859
```scala
Welcome to Scala version 2.8.0.r0-b20091123212008 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_15).
Type in expressions to have them evaluated.
Type :help for more information.

scala> def doit(implicit f: => Int) = f * 2
doit: (implicit f: => Int)Int

scala> implicit val x = 42
x: Int = 42

scala> doit
<console>:7: error: could not find implicit value for parameter f: => Int
       doit
       ^

scala> implicit val x: () => Int = () => 42
x: () => Int = <function0>

scala> doit                                
<console>:9: error: could not find implicit value for parameter f: => Int
       doit
       ^
```
